--- a/package.json
+++ b/package.json
@@ -29,5 +29,20 @@
   "bugs": {
     "url": "https://github.com/skyleaf-design/lhvm-js/issues"
   },
-  "homepage": "https://github.com/skyleaf-design/lhvm-js#readme"
+  "homepage": "https://github.com/skyleaf-design/lhvm-js#readme",
+  "devDependencies": {
+    "@types/google-protobuf": "^3.2.7",
+    "browserify": "^14.5.0",
+    "eslint": "^4.12.0",
+    "express": "^4.16.2",
+    "google-protobuf": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.3",
+    "gulp-util": "^3.0.8",
+    "ts-protoc-gen": "^0.4.0",
+    "tsify": "^3.0.3",
+    "typescript": "^2.6.2",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
+  }
 }
