--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "browserify": "^14.5.0",
     "eslint": "^4.12.0",
     "express": "^4.16.2",
+    "fast-simplex-noise": "^3.2.0",
     "google-protobuf": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.3",
