TypeScrpt is now being linted.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-util": "^3.0.8",
     "ts-protoc-gen": "^0.4.0",
     "tsify": "^3.0.3",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
