--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/skyleaf-design/lhvm-js#readme",
   "devDependencies": {
     "@types/google-protobuf": "^3.2.7",
+    "@types/uuid": "^3.4.3",
     "browserify": "^14.5.0",
     "eslint": "^4.12.0",
     "express": "^4.16.2",
@@ -43,6 +44,7 @@
     "tsify": "^3.0.3",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2",
+    "uuid": "^3.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
   }
