--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,15 @@
     /* Basic Options */
     "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    // "lib": [],                             /* Specify library files to be included in the compilation:  */
-    // "allowJs": true,                       /* Allow javascript files to be compiled. */
+    "lib": ["dom", "es2015"],                             /* Specify library files to be included in the compilation:  */
+    "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
-    // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    // "outDir": "./",                        /* Redirect output structure to the directory. */
-    // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    // "outFile": "./dist/lhvm.js",                       /* Concatenate and emit output to single file. */
+    "outDir": "./dist/lhvm",                        /* Redirect output structure to the directory. */
+    "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "removeComments": true,                /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
@@ -51,5 +51,17 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-  }
+  },
+  "files": [
+    "./src/ExternalOpStack.ts",
+    "./src/descriptor/CloudDescriptor_pb.d.ts",
+    "./src/descriptor/CloudDescriptor_pb.js",
+    "./src/descriptor/ConstantDescriptor_pb.js",
+    "./src/descriptor/OpStackDescriptor_pb.js",
+    "./src/descriptor/PulseDescriptor_pb.js",
+    "./src/descriptor/SineDoubleDescriptor_pb.js",
+    "./src/descriptor/SineSingleDescriptor_pb.js",
+    "./src/descriptor/ZoneDescriptor_pb.js",
+    "./src/descriptor/ZoneOpDescriptor_pb.js"
+  ]
 }
